tests/e2e/semantics/object_index_complex_invalid.error
Error: syntax error in story at line 2, column 1

2|    a.k[1] = "b"
      ^^^^^^^^

E0100: Can't assign `string` to `boolean`
