tests/e2e/semantics/object_index_complex_invalid.story
a = {"k": [true, false]}
a.k[1] = "b"
